Changes for Issue #442, #520, #528 Massive mega-change updating AlleleParsers to extract AN, AC, HOM from population frequency sources. Add new Gnomad3 and Gnomad4 AlleleParsers Add new DirectoryArchive to enable parsing multiple VCF files in a single directory, e.g. for gnomad-v3 and gnomad-v4 Remove dbsnp, exac and esp data sources as these are now merged into gnomad (dbsnp was used as the source of the 1K genomes and TOPMed data). Update hg19 to use gnomad-v2.1 Update hg38 to use gnomad-v4 (#528) Update path sources to use dbNSFP v4.5a and include AlphMissense (#520). Remove M-CAP, MPC and PrimateAI